[gd_scene load_steps=2 format=2]

[ext_resource path="res://Quiz.gd" type="Script" id=1]

[node name="Quiz" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
margin_right = 1025.0
margin_bottom = 598.0
color = Color( 0.25098, 0.27451, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 1025.0
margin_bottom = 234.0
color = Color( 0.415686, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 184.0
align = 1
valign = 1

[node name="Buttons" type="Control" parent="."]
margin_left = 359.0
margin_top = 174.0
margin_right = 703.0
margin_bottom = 517.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Buttons"]
margin_top = 68.0
margin_right = 344.0
margin_bottom = 128.0

[node name="Button2" type="Button" parent="Buttons"]
visible = false
margin_top = 137.0
margin_right = 344.0
margin_bottom = 197.0

[node name="Button3" type="Button" parent="Buttons"]
visible = false
margin_top = 206.0
margin_right = 344.0
margin_bottom = 266.0

[node name="Button4" type="Button" parent="Buttons"]
visible = false
margin_top = 275.0
margin_right = 344.0
margin_bottom = 335.0

[node name="Button5" type="Button" parent="Buttons"]
margin_top = 360.0
margin_right = 344.0
margin_bottom = 420.0
text = "Pr√≥xima Pergunta"

[connection signal="pressed" from="Buttons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button5_pressed"]
